<resources>
    <string name="app_name">ShoeStore</string>
    <string name="instructions">Instructions</string>
    <string name="instructionsContent">You Can Add you Shoe, \nYou Can Delete You Shoe</string>
    <string name="next">next</string>
    <string name="shoes_store">SHOES STORE</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="join_now">JOIN NOW</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="company">Company</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="shoes_name">Shoes Name:</string>
    <string name="shoe_size">Size:</string>
    <string name="shoe_company">Company:</string>
    <string name="welcome_to_my_shoe_store">Welcome To My Shoe Store</string>
    <string name="welcome_content">I Hope you are doing well, \n Thank you for using my Application</string>
</resources>