<?xml version="1.0" encoding="utf-8"?>
<layout>
    <!-- LinearLayout to display the views vertically-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/b3"
        android:orientation="vertical"
        tools:context=".ui.LoginFragment">
        <!-- TextView to display the app title in the home fragment-->
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:text="@string/shoes_store"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!--        TextInputLayout and EditTextLayout for enter email-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/email"
            app:boxStrokeColor="@color/b2"
            app:hintTextColor="@color/b1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        TextInputLayout and EditTextLayout for enter password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/b2"
            app:hintTextColor="@color/b1"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        LinerLayout and inside of it two button to navigate to the next screen-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="horizontal">
            <!-- Button to navigate to the next fragment-->
            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:text="@string/login"
                android:textColor="@color/w" />

            <!-- Button to navigate to the next fragment-->
            <Button
                android:id="@+id/btn_join"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/b1"
                android:text="@string/join_now"
                android:textColor="@color/w" />
        </LinearLayout>


    </LinearLayout>
</layout>