<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- LinearLayout to display the views vertically-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/b3"
        android:orientation="vertical"
        tools:context=".ui.ShoeDetailFragment">

        <!--        TextInputLayout and EditTextLayout for enter Shoe Name-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/name"
            app:boxStrokeColor="@color/b2"
            app:hintTextColor="@color/b1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        TextInputLayout and EditTextLayout for enter Shoe Size-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/size"
            app:boxStrokeColor="@color/b2"
            app:hintTextColor="@color/b1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_size"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--        TextInputLayout and EditTextLayout for enter Shoe Company-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/company"
            app:boxStrokeColor="@color/b2"
            app:hintTextColor="@color/b1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_company"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        TextInputLayout and EditTextLayout for enter Shoe Description-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/description"
            app:boxStrokeColor="@color/b2"
            app:hintTextColor="@color/b1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        LinerLayout and inside of it two button one to add and one to cancel-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal"
            android:padding="20dp">
            <!-- Button to cancel and navigate back to listFragment-->
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/b1"
                android:text="@string/cancel"
                android:textColor="@color/w" />
            <!-- Button to add the item in the listFragment-->
            <Button
                android:id="@+id/btn_add"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:text="@string/add"
                android:textColor="@color/w" />

        </LinearLayout>
    </LinearLayout>
</layout>